--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,8 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img src="assets/img/logo.png" class="logo" alt="" />
-      </a>
+{% load static %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+        <div class="container">
+          <a class="navbar-brand" href={% url "index" %}>
+            <img src={% static "img/logo.png" %} class="logo" alt="" />
+          </a>
       <button
         class="navbar-toggler"
         type="button"
@@ -14,23 +15,26 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
           <li class="nav-item active mr-3">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href={% url "index" %}>Home</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href={% url "about" %}>About</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link" href="listings.html">Featured Listings</a>
+            {% comment %} we need to listing button {% endcomment %}
+            <a class="nav-link" href="listing.html">Featured Listings</a>
           </li>
         </ul>
 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mr-3">
+            {% comment %} we need to register button {% endcomment %}
             <a class="nav-link" href="register.html">
               <i class="fas fa-user-plus"></i> Register</a
             >
           </li>
           <li class="nav-item mr-3">
+            {% comment %} we need to login button {% endcomment %}
             <a class="nav-link" href="login.html">
               <i class="fas fa-sign-in-alt"></i>
 
