--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -2,9 +2,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
+          <a href="tel:+85255555555">
           <i class="fas fa-phone"></i> (852)-555-5555
         </div>
         <div class="col-md-4">
+          <a href="mailto:contact@bcrealestate.co">
           <i class="fas fa-envelope-open"></i> contact@bcrealestate.co
         </div>
         <div class="col-md-4">
