--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -83,49 +83,74 @@
   <!-- Team -->
   <section id="team" class="py-5">
     <div class="container">
-      <h2 class="text-center">Our Team</h2>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <img
-            src="assets/img/realtors/kyle.jpg"
-            alt=""
-            class="rounded-circle mb-3"
-          />
-          <h4>Kyle Chan</h4>
-          <p class="text-success">
-            <i class="fas fa-award text-success mb-3"></i> Realtor
-          </p>
-          <hr />
-          <p><i class="fas fa-phone"></i> (852)-555-5555</p>
-          <p><i class="fas fa-envelope-open"></i> kyle@bcrealestate.co</p>
-        </div>
+        <h2 class="text-center">Our Team</h2>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <img
+                    src="assets/img/realtors/kyle.jpg"
+                    alt=""
+                    class="rounded-circle mb-3"
+                />
+                <h4>Kyle Chan</h4>
+                <p class="text-success">
+                    <i class="fas fa-award text-success mb-3"></i> Realtor
+                </p>
+                <hr />
+                <p>
+                    <a href="tel:+85255555555" style="text-decoration: none; color: inherit;">
+                        <i class="fas fa-phone"></i> (852)-555-5555
+                    </a>
+                </p>
+                <p>
+                    <a href="mailto:kyle@bcrealestate.co" style="text-decoration: none; color: inherit;">
+                        <i class="fas fa-envelope-open"></i> kyle@bcrealestate.co
+                    </a>
+                </p>
+            </div>
 
-        <div class="col-md-4">
-          <img
-            src="assets/img/realtors/mark.jpg"
-            alt=""
-            class="rounded-circle mb-3"
-          />
-          <h4>Mark Lee</h4>
-          <p class="text-success">Realtor</p>
-          <hr />
-          <p><i class="fas fa-phone"></i> (852)-444-4444</p>
-          <p><i class="fas fa-envelope-open"></i> mark@bcrealestate.co</p>
-        </div>
+            <div class="col-md-4">
+                <img
+                    src="assets/img/realtors/mark.jpg"
+                    alt=""
+                    class="rounded-circle mb-3"
+                />
+                <h4>Mark Lee</h4>
+                <p class="text-success">Realtor</p>
+                <hr />
+                <p>
+                    <a href="tel:+85244444444" style="text-decoration: none; color: inherit;">
+                        <i class="fas fa-phone"></i> (852)-444-4444
+                    </a>
+                </p>
+                <p>
+                    <a href="mailto:mark@bcrealestate.co" style="text-decoration: none; color: inherit;">
+                        <i class="fas fa-envelope-open"></i> mark@bcrealestate.co
+                    </a>
+                </p>
+            </div>
 
-        <div class="col-md-4">
-          <img
-            src="assets/img/realtors/jenny.jpg"
-            alt=""
-            class="rounded-circle mb-3"
-          />
-          <h4>Jenny Cheung</h4>
-          <p class="text-success">Realtor</p>
-          <hr />
-          <p><i class="fas fa-phone"></i> (852)-333-3333</p>
-          <p><i class="fas fa-envelope-open"></i> jenny@bcrealestate.co</p>
+            <div class="col-md-4">
+                <img
+                    src="assets/img/realtors/jenny.jpg"
+                    alt=""
+                    class="rounded-circle mb-3"
+                />
+                <h4>Jenny Cheung</h4>
+                <p class="text-success">Realtor</p>
+                <hr />
+                <p>
+                    <a href="tel:+85233333333" style="text-decoration: none; color: inherit;">
+                        <i class="fas fa-phone"></i> (852)-333-3333
+                    </a>
+                </p>
+                <p>
+                    <a href="mailto:jenny@bcrealestate.co" style="text-decoration: none; color: inherit;">
+                        <i class="fas fa-envelope-open"></i> jenny@bcrealestate.co
+                    </a>
+                </p>
+            </div>
         </div>
-      </div>
     </div>
-  </section>
+</section>
+
 {% endblock %} 
