--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -164,7 +164,7 @@
                     </div>
                   </div>
                   <hr />
-                  <a href="listing.html" class="btn btn-primary btn-block"
+                  <a href={% url "listings" %} class="btn btn-primary btn-block"
                     >More Info</a
                   >
                 </div>
@@ -223,7 +223,7 @@
                     </div>
                   </div>
                   <hr />
-                  <a href="listing.html" class="btn btn-primary btn-block"
+                  <a href={% url "listings" %} class="btn btn-primary btn-block"
                     >More Info</a
                   >
                 </div>
@@ -280,7 +280,7 @@
                     </div>
                   </div>
                   <hr />
-                  <a href="listing.html" class="btn btn-primary btn-block"
+                  <a href={% url "listings" %} class="btn btn-primary btn-block"
                     >More Info</a
                   >
                 </div>
