--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -28,11 +28,14 @@
           class="nav-item mr-3"
           {% endif %}>
             <a class="nav-link" href={% url "about" %}>About</a>
-        </li>
-          <li class="nav-item mr-3">
-            {% comment %} we need to listing button {% endcomment %}
-            <a class="nav-link" href="listing.html">Featured Listings</a>
           </li>
+          <li {% if 'listings' in request.path %}
+          class="nav-item active mr-3"
+          {% else %}
+          class="nav-item mr-3"
+          {% endif %}>
+            <a class="nav-link" href={% url "listings" %}>Featured Listings</a>
+          </class=>
         </ul>
 
         <ul class="navbar-nav ml-auto">
