Step13: add postgres sql, listing models.py content and realtors models.py content

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -84,8 +84,8 @@
   <section id="team" class="py-5">
     <div class="container">
         <h2 class="text-center">Our Team</h2>
-        <div class="row text-center">
-            <div class="col-md-4">
+        <div class="row text-center" style="display: flex; justify-content: space-around; align-items: center;">
+            <div class="col-md-4" style="height: 350px;"> <!-- 统一高度 -->
                 <img
                     src="assets/img/realtors/kyle.jpg"
                     alt=""
@@ -108,7 +108,7 @@
                 </p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4" style="height: 350px;"> <!-- 统一高度 -->
                 <img
                     src="assets/img/realtors/mark.jpg"
                     alt=""
@@ -129,7 +129,7 @@
                 </p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4" style="height: 350px;"> <!-- 统一高度 -->
                 <img
                     src="assets/img/realtors/jenny.jpg"
                     alt=""
@@ -163,6 +163,7 @@
         }
     </style>
 </section>
+
 
 
 
