--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block content %}
+{% load humanize %}
 <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
       <div class="row text-center">
@@ -44,7 +45,7 @@
             <div class="card-img-overlay">
               <h2>
                 <span class="badge badge-secondary text-white"
-                  >${{listing.price}}</span
+                  >${{listing.price|intcomma}}</span
                 >
               </h2>
             </div>
@@ -69,12 +70,7 @@
                   <i class="fas fa-bed"></i> Bedrooms: {{listing.bedrooms}}
                 </div>
                 <div class="col-6">
-                  <i class="fas fa-bath"></i> Bathrooms: 
-                  {% if listing.bathroom|floatformat:1 == "0.0" %}
-                      {{ listing.bathroom|floatformat:0 }}
-                  {% else %}
-                      {{ listing.bathroom|floatformat:1 }}
-                  {% endif %}
+                  <i class="fas fa-bath"></i> Bathrooms: {{listing.bathroom}}                           
                 </div>
               </div>           
               <hr />
@@ -85,7 +81,7 @@
               </div>
               <div class="row text-secondary pb-2">
                 <div class="col-6">
-                  <i class="fas fa-clock"></i> {{listing.list_date}}
+                  <i class="fas fa-clock"></i> {{listing.list_date|timesince|slice:":5"}} ago
                 </div>
               </div>
               <hr />
