--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,8 @@ img {
   margin-right: 0.4rem; }
 
 #showcase {
-  background-image: url( '/static/img/showcase.jpg' );
+  background: url(../img/showcase.jpg) no-repeat
+  center/cover fixed;
   position: relative;
   min-height: 650px;
   color: #fff;
@@ -34,8 +35,8 @@ img {
     background: rgba(51, 51, 51, 0.8); }
 
 #services {
-  background: url(../img/building.jpg) no-repeat top center fixed/cover;
-  min-height: 300px;
+  background: url(../img/building.jpg) no-repeat 
+  center/cover fixed;
   position: relative;
   overflow: hidden; }
   #services::before {
@@ -48,7 +49,8 @@ img {
     background: rgba(32, 134, 107, 0.8); }
 
 #showcase-inner {
-  background: url(../img/building.jpg) no-repeat top center fixed/cover;
+  background: url(../img/building.jpg) no-repeat 
+  center/cover fixed;
   position: relative;
   overflow: hidden;
   min-height: 200px; }
