--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -83,28 +83,7 @@
               </div>
               <div class="row text-secondary pb-2">
                 <div class="col-6">
-                  <i class="fas fa-clock"></i> 
-                  {% with time_since=listing.list_date|timesince %}
-                  {% if "day" in time_since %}
-                  {% if time_since|slice:":1" == "1" %}1 day ago
-                  {% else %}
-                  {{ time_since|slice:":6" }} ago
-                  {% endif %}
-                  {% elif "hour" in time_since %}
-                  {% if time_since|slice:":1" == "1" %}1 hour ago
-                  {% else %}
-                  {{ time_since|slice:":7" }} ago
-                  {% endif %}
-                  {% elif "minute" in time_since %}
-                  {% if time_since|slice:":1" == "1" %}1 minute ago
-                  {% elif time_since|slice:":1" == "0" %}Just now
-                  {% else %}
-                  {{ time_since|slice:":10" }} ago
-                  {% endif %}
-                  {% else %}
-                  {{ time_since|slice:":3" }}ago
-                  {% endif %}
-                  {% endwith %}
+                  <i class="fas fa-clock"></i> {{listing.list_date|timesince|slice:":6"}} ago
                 </div>
               </div>
               <hr />
@@ -125,23 +104,47 @@
 
       <div class="row">
         <div class="col-md-12">
+          <!--pagination part of the code-->
+          {% if listings.has_other_pages %}
           <ul class="pagination">
+            {% if listings.has_previous %}
+            <li class ="page-item">
+              <a href = "?page={{listings.previous_page_number}}"
+            class="page-link">&laquo;</a>
+            </li>
+            {% else %}
             <li class="page-item disabled">
               <a class="page-link" href="#">&laquo;</a>
             </li>
+            {% endif %}
+            <!-- use for loop to gen page numbers-->
+            {% for i in listings.paginator.page_range %}
+            <!--check current page, then change the button color -->
+            {% if listings.number == i %}
             <li class="page-item active">
-              <a class="page-link" href="#">1</a>
+              <a class="page-link" href ="?page={{i}}">{{i}}</a>
             </li>
+            {% else %}
             <li class="page-item">
-              <a class="page-link" href="#">2</a>
+              <a class="page-link" href ="?page={{i}}">{{i}}</a>
             </li>
+            {% endif %}
+            {% endfor %}
+
+            <!--next button-->
+            {% if listings.has_next %}
             <li class="page-item">
-              <a class="page-link" href="#">3</a>
-            </li>
-            <li class="page-item">
+              <a href = "?page={{listings.next_page_number}}" 
+            class ="page-link">&raquo;</a>
+            <a></a>
+            <li>
+            {% else %}
+            <li class="page-item disabled">
               <a class="page-link" href="#">&raquo;</a>
             </li>
+            {% endif %}
           </ul>
+          {% endif %}
         </div>
       </div>
     </div>
