--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -3,7 +3,7 @@
 {% load static %} 
 <!-- load static block -->
 {% block branding %}
-<h1 style="background-color: blue" id="head">
+<h1 style="background-color: transparent" id="head">
     <img 
      src="{% static 'img/logo.png' %}" 
      alt="BC Real Estate" 
