--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -85,44 +85,40 @@
     >
   </section>
 
-  <!-- Team -->
-  <section id="team" class="py-5">
-    <div class="container">
+    <!-- Team -->
+    <section id="team" class="py-5">
+      <div class="container">
         <h2 class="text-center">Our Team</h2>
-        <div class="row text-center" style="display: flex; justify-content: space-around; align-items: center;">
-        {% if realtors %}
-        {% for realtor in realtors %}
-          <div class="col-md-4" style="height: 350px;"> <!-- 统一高度 -->
-                <img
-                    src={{realtor.photo.url}}
-                    alt=""
-                    class="rounded-circle mb-3"
-                />
-                <h4>{{realtor.name}}</h4>
-                <p class="text-success">
-                    <i class="fas fa-award text-success mb-3"></i> Realtor
-                </p>
-                <hr />
-                <p>
-                    <a href="tel:+85255555555" >
-                        <i class="fas fa-phone"></i> {{realtor.phone}}
-                    </a>
-                </p>
-                <p>
-                    <a href="mailto:kyle@bcrealestate.co" >
-                        <i class="fas fa-envelope-open"></i> {{realtor.email}}
-                    </a>
-                </p>
-            </div>
-        
+        <div class="row text-center">
+          {% if realtors %}
+          {% for realtor in realtors %}
+          <div class="col-md-4">
+            <img
+              src={{realtor.photo.url}}
+              alt=""
+              class="rounded-circle mb-3"
+            />
+            <h4>{{realtor.name}}</h4>
+            <p class="text-success">
+              <i class="fas fa-award text-success mb-3"></i> Realtor
+            </p>
+            <hr />
+            <p>    
+              <i class="fas fa-phone"></i> 
+              <a href="tel:{{realtor.phone}}">{{realtor.phone}}</a>
+            </p>
+            <p>
+              <i class="fas fa-envelope-open"></i>
+              <a href="mailto:{{realtor.email}}">{{realtor.email}}</a>
+            </p>
+          </div>
+          {% endfor %}
+          {% else %}
+          <div class="col-md-12">
+            <p>No Realtor available</p>
+          </div>
+          {% endif %}
         </div>
-        {% endfor %}
-        {% else %}
-        <div class="col-md-12">
-          <p>No Realtor available</p>
-        </div>
-        {% endif %}
       </div>
-  </div>
-</section>
-{% endblock %}
+    </section>
+    {% endblock %}
