--- a/static/admin/css/base.css
+++ b/static/admin/css/base.css
@@ -5,7 +5,7 @@
 /* VARIABLE DEFINITIONS */
 html[data-theme="light"],
 :root {
-    --primary: #c8bc79;
+    --primary: #79aec8;
     --secondary: #417690;
     --accent: #f5dd5d;
     --primary-fg: #fff;
