--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -20,12 +20,12 @@
               </div>
 
               <div class="col-md-4 mb-3">
-                <label class="sr-only">City</label>
+                <label class="sr-only">title</label>
                 <input
                   type="text"
-                  name="Street"
+                  name="title"
                   class="form-control"
-                  placeholder="Street"
+                  placeholder="title"
                 />
               </div>
 
