Step24: add serarch function and sick the value in select option

--- a/templates/404.html
+++ b/templates/404.html
@@ -11,10 +11,9 @@
 </head>
 <body>
     <h1>404 - Page Not Found</h1>
-    
     <p>抱歉，找不到該頁面。</p>
-    <img src={% static "/img/about.jpg" %} alt="" />
-    <img src={% static "/img/404.jpg" %} width="200" height="300" alt="" />
+    <img src="{% static '/img/about.jpg' %}" alt="" />
+    <img src="{% static '/img/404_2.jpeg' %}" width="500" height="500" alt="" />
    
 </body>
 </html>
