--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -40,6 +40,7 @@
             pariatur!
           </p>
           <img src={% static "/img/about.jpg" %} alt="" />
+          <img src="{% static '/img/404_2.jpeg' %}"/>
           <p class="mt-4">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis esse officia repudiandae ad saepe ex, amet neque quod
