--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -27,18 +27,18 @@
                     </div>
   
                     <div class="col-md-4 mb-3">
-                      <label class="sr-only">title</label>
+                      <label class="sr-only">Title</label>
                       <input
                         type="text"
                         name="title"
                         class="form-control"
-                        placeholder="title"
+                        placeholder="Title"
                       />
                     </div>
   
                     <div class="col-md-4 mb-3">
                       <label class="sr-only">District</label>
-                      <select name="district" class="form-control">
+                      <select name="District" class="form-control">
                         <option selected="true" disabled="disabled">
                           District (All)
                         </option>
