Step24: add register, login functiuons and dashboard page

--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -171,6 +171,7 @@
         </div>
         {% endif %}
       </div>
+      <p style="front-size: 40px;">Total search results : {{total}}</p>
     </div>
   </section>
 {% endblock %}
