--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -28,6 +28,7 @@
           class="nav-item mr-3"
           {% endif %}>
             <a class="nav-link" href={% url "about" %}>About</a>
+
           </li>
           <li {% if 'listings' in request.path %}
           class="nav-item active mr-3"
@@ -37,22 +38,24 @@
             <a class="nav-link" href={% url "listings" %}>Featured Listings</a>
           </class=>
         </ul>
-
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item mr-3">
-            {% comment %} we need to register button {% endcomment %}
-            <a class="nav-link" href="register.html">
+          <li {% if 'register' in request.path %}
+              class="nav-item mr-3 active"
+            {% else %}
+            class="nav-item mr-3" {% endif %}>
+            <a class="nav-link" href={% url "register" %}>
               <i class="fas fa-user-plus"></i> Register</a
             >
           </li>
-          <li class="nav-item mr-3">
-            {% comment %} we need to login button {% endcomment %}
-            <a class="nav-link" href="login.html">
+          <li {% if 'login' in request.path %}
+              class="nav-item mr-3 active"
+            {% else %}
+            class="nav-item mr-3" {% endif %}>
+            <a class="nav-link" href={% url "login" %}>
               <i class="fas fa-sign-in-alt"></i>
-
               Login</a
             >
-          </li>
+          </class=>
         </ul>
       </div>
     </div>
