Step25: add 404 pages photo, search function back to select all option, dashboard show login message

--- a/templates/404.html
+++ b/templates/404.html
@@ -10,11 +10,9 @@
     <title>Page Not Found</title>
 </head>
 <body>
-    <h1>404 - Page Not Found</h1>
-    <p>抱歉，找不到該頁面。</p>
-    <img src="{% static '/img/about.jpg' %}" alt="" />
-    <img src="{% static '/img/404_2.jpeg' %}" width="500" height="500" alt="" />
-   
+    <h1>OOps! the listing not found</h1>
+
+    <img src="{% static '/img/404_2.jpeg' %}" width="450" height="450" alt="" onerror="this.styple.display='none'"/>
 </body>
 </html>
 {% endblock %}
