--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -14,6 +14,10 @@
   <!-- Breadcrumb -->
   <section id="bc" class="mt-3">
     <div class="container">
+    <!--alert-->
+    {% include 'partials/_alert.html' %}
+    <form action="{% url 'login' %}" method='POST'>
+    {% csrf_token %}
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
