Step26: register & logout function

--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -39,6 +39,7 @@
         {% for listing in listings %}
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card listing-preview">
+            <a href="{% url 'listing' listing.id %}">
             <img
               class="card-img-top"
               src={{listing.photo_main.url}}
