--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load humanize %} 
+{% load static %}
 <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
       <div class="row text-center">
@@ -14,21 +16,18 @@
   <!-- Breadcrumb -->
   <section id="bc" class="mt-3">
     <div class="container">
-    <!--alert-->
-    {% include 'partials/_alert.html' %}
-    <form action="{% url 'login' %}" method='POST'>
-    {% csrf_token %}
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="index.html"> <i class="fas fa-home"></i> Home</a>
+            <a href={% url "index" %}> <i class="fas fa-home"></i> Home</a>
           </li>
           <li class="breadcrumb-item active">Dashboard</li>
         </ol>
       </nav>
     </div>
   </section>
-
+          <!--alert-->
+          {% include 'partials/_alert.html' %}
   <section id="dashboard" class="py-4">
     <div class="container">
       <div class="row">
@@ -45,6 +44,7 @@
             </thead>
             <tbody>
               <tr>
+                
                 <td>22</td>
                 <td>45 Prince Street</td>
                 <td>
