--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %} 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
         <div class="container">
           <a class="navbar-brand" href={% url "index" %}>
@@ -39,6 +40,24 @@
           </class=>
         </ul>
         <ul class="navbar-nav ml-auto">
+          <!--if login then show dashboard and logout link-->
+          {% if  user.is_authenticated %}
+          <!--dashboard link-->
+          <li {% if 'dashboard' in request.path %} class='nav-item mr-3 active'
+          {% else %} class='nav-item mr-3' {% endif %}>
+          <a class="nav-link" href={% url 'dashboard' %} >Welcome, {{ user.username|lower }} (dashboard)</a>
+          </li>
+<!-------------------------logout------------------------>
+          <li class="nav-item mr-3">
+          <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
+          <i class="fas fa-sign-out-alt"></i>Logout
+          </a>
+          <form action ="{% url 'logout' %}" method="POST" id = 'logout'>
+          {% csrf_token %}
+          <input type = 'hidden'>
+          </form>
+          </li>
+          {% else %}
           <li {% if 'register' in request.path %}
               class="nav-item mr-3 active"
             {% else %}
@@ -56,6 +75,7 @@
               Login</a
             >
           </class=>
+          {% endif %}
         </ul>
       </div>
     </div>
