--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} 
-{% load humanize %} 
+{% load humanize %}
+{% block title %} | 404 not found {% endblock %}
 {% block content %}
 {% load static %} 
 <!DOCTYPE html>
