--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} 
 <!--add django humanize function-->
 {% load humanize %} 
+{% block title %} | Listings {% endblock %}
 {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
