--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} 
 {% load static %}
 {% load humanize %}
+{% block title %} | Search {% endblock %}
 {% block content %}
 <section id="showcase-inner" class="showcase-search text-white py-5">
     <div class="container">
@@ -100,6 +101,7 @@
         {% for listing in listings %}
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card listing-preview">
+            <a href="{% url 'listing' listing.id %}">
             <img
               class="card-img-top"
               src={{listing.photo_main.url}}
