--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %} 
 {% load humanize %}
+<!--add title to the tab-->
+{% block title %} | Welcome {% endblock %}
 {% block content %}
 {% include 'partials/_alert.html' %}
     <!-- Showcase -->
