Step27: modif some text font

--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,4 +1,4 @@
-<footer id="main-footer" class="py-4 bg-primary text-white text-center">
+<footer id="main-footer" class="py-4 bg-primary text-white text-center text-uppercase">
   <a href="{% url 'index' %}" class="text-white">Copyright &copy; <span class="year"></span></a> 
   <a href="{% url 'index' %}" class="text-white">BC Real Estate</a>
 </footer>
