--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -8,7 +8,7 @@
       <div class="row text-center">
         <div class="col-md-12">
           <h1 class="display-4">{{listing.title}}</h1>
-          <p class="lead"><i class="fas fa-map-marker"></i> Yau Tsim Mong</p>
+          <p class="lead"><i class="fas fa-map-marker"></i> {{listing.district}}</p>
         </div>
       </div>
     </div>
@@ -25,7 +25,7 @@
           <li class="breadcrumb-item">
             <a href={% url 'listings' %}>Listings</a>
           </li>
-          <li class="breadcrumb-item active">45 Prince Street</li>
+          <li class="breadcrumb-item active">{{listing.title}}</li>
         </ol>
       </nav>
     </div>
