--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -205,56 +205,51 @@
     </div>
   </section>
 
-  <!-- Inquiry Modal -->
-  <div class="modal fade" id="inquiryModal" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="inquiryModalLabel">Make An Inquiry</h5>
-          <button type="button" class="close" data-dismiss="modal">
-            <span>&times;</span>
-          </button>
+<!-- Inquiry Modal -->
+<div class="modal fade" id="inquiryModal" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title {% if not user.is_authenticated %}text-muted{% endif %}" id="inquiryModalLabel">
+          Make An Inquiry
+        </h5>
+        <button type="button" class="close" data-dismiss="modal">
+          <span>&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {% if not user.is_authenticated %}
+        <div class="alert alert-warning" role="alert">
+          <span class="font-weight-bold">Reminder:</span>
+          <br>
+          You need to <a href="{% url 'login' %}">login</a> to make an inquiry!
         </div>
-        <div class="modal-body">
+        {% else %}
           <form action="{% url 'contact' %}" method="POST">
-              {% csrf_token %}
-              {% if user.is_authenticated %}
-              <input type='hidden' name='user_id' value="{{user.id}}"/>
-              {% else %}
-              <input type='hidden' name='user_id' value="0"/>
-              {% endif %}
-              <!--add realtor email-->
-              <input type='hidden' name="realtor_email" value="{{listing.realtor.email}}"/>
-              <input type='hidden' name="listing_id" value="{{listing.id}}"/>
-              <div class="form-group">
-                  <label for="property_name" class="col-form-label">Property:</label>
-              <input
-                type="text"
-                name="listing"
-                class="form-control"
-                value="{{listing.title}}"
-              
-              />
+            {% csrf_token %}
+            <input type='hidden' name='user_id' value="{{ user.id|default:0 }}"/>
+            <!-- Add realtor email -->
+            <input type='hidden' name="realtor_email" value="{{ listing.realtor.email }}"/>
+            <input type='hidden' name="listing_id" value="{{ listing.id }}"/>
+            <div class="form-group">
+              <label for="property_name" class="col-form-label">Property:</label>
+              <input type="text" name="listing" class="form-control" value="{{ listing.title }}" readonly />
             </div>
             <div class="form-group">
               <label for="name" class="col-form-label">Name:</label>
               <input type="text" name="name" class="form-control" 
-              {% if user.is_authenticated %}
-              value="{{user.first_name}}{{user.last_name}}"
-              {% endif%}
-              required />
+                {% if user.is_authenticated %}
+                value="{{ user.first_name }}{{ user.last_name }}"
+                {% endif %}
+                required />
             </div>
             <div class="form-group">
               <label for="email" class="col-form-label">Email:</label>
-              <input
-                type="email"
-                name="email"
-                class="form-control"
+              <input type="email" name="email" class="form-control" 
                 {% if user.is_authenticated %}
-              value="{{user.email}}"
-              {% endif%}
-                required
-              />
+                value="{{ user.email }}"
+                {% endif %}
+                required />
             </div>
             <div class="form-group">
               <label for="phone" class="col-form-label">Phone:</label>
@@ -262,20 +257,15 @@
             </div>
             <div class="form-group">
               <label for="message" class="col-form-label">Message:</label>
-              <textarea name="message" class="form-control"></textarea>
+              <textarea name="message" class="form-control" required></textarea>
             </div>
             <hr />
-            <input
-              type="submit"
-              value="Send"
-              class="btn btn-block btn-secondary"
-            />
+            <input type="submit" value="Send" class="btn btn-block btn-secondary" />
           </form>
-        </div>
+        {% endif %}
       </div>
     </div>
   </div>
-
-
+</div>
 
 {% endblock %}
