--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -194,16 +194,16 @@
             </div>
           </div>
           <button
-            class="btn-primary btn-block btn-lg"
-            data-toggle="modal"
-            data-target="#inquiryModal"
-          >
-            Make An Inquiry
-          </button>
-        </div>
+          class="btn btn-block btn-lg {% if user.is_authenticated %}btn-primary{% else %}btn-muted text-white{% endif %}"
+          data-toggle="modal"
+          data-target="#inquiryModal"
+        >
+          Make An Inquiry
+        </button>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
 <!-- Inquiry Modal -->
 <div class="modal fade" id="inquiryModal" role="dialog">
