--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -44,7 +44,7 @@
           <!--dashboard link-->
           <li {% if 'dashboard' in request.path %} class='nav-item mr-3 active'
           {% else %} class='nav-item mr-3' {% endif %}>
-          <a class="nav-link" href={% url 'dashboard' %} >Welcome, {{ user.username|lower }} (dashboard)</a>
+          <a class="nav-link" href={% url 'dashboard' %} >Welcome, {{user.username}} (dashboard)</a>
           </li>
 <!-------------------------logout------------------------>
           <li class="nav-item mr-3">
