--- a/bcre/static/css/admin.css
+++ b/bcre/static/css/admin.css
@@ -36,3 +36,15 @@ a.button {
   background: #253d5f;
 }
 
+a.background-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background: #253d5f;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+a.background-button:hover {
+  background: #1a2e44;
+}
